BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Speaker_Evaluation__c.object
<CustomObject>
    <description>Speaker Evaluations data for professionals</description>
    <fields>
        <fullName>A10_MSL_BMS__c</fullName>
        <label>A10</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>A11_MSL_BMS__c</fullName>
        <label>A11</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>A12_MSL_BMS__c</fullName>
        <label>A12</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the Account</description>
        <label>Speaker</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Speaker Evaluations</relationshipLabel>
        <relationshipName>Speaker_Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Overall Comments for the evaluation</description>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Credibility__c</fullName>
        <description>Picklist of credibility ratings</description>
        <inlineHelpText>How credible was this speaker on the topic?</inlineHelpText>
        <label>Credibility</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Date of the evaluation</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Overall_Rating__c</fullName>
        <description>Picklist of overall ratings</description>
        <inlineHelpText>Please provide the overall rating of this speaker&apos;s performance</inlineHelpText>
        <label>Overall Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preparedness__c</fullName>
        <description>Picklist of preparedness ratings</description>
        <inlineHelpText>How prepared was this speaker?</inlineHelpText>
        <label>Preparedness</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Presentation_Skills__c</fullName>
        <description>Picklist of presentation skills ratings</description>
        <inlineHelpText>How good were this speaker&apos;s presentation skills?</inlineHelpText>
        <label>Presentation Skills</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Professionalism__c</fullName>
        <description>Picklist of professionalism ratings</description>
        <inlineHelpText>How professional was this speaker before, during and after the engagement?</inlineHelpText>
        <label>Professionalism</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q10_MSL_BMS_IC__c</fullName>
        <description>Speaker Evaluation - MSL - Q10. The speaker demonstrated appropriate physical presence (posture, eye contact, hand gestures, etc)</description>
        <inlineHelpText>Q10. The speaker demonstrated appropriate physical presence (posture, eye contact, hand gestures, etc)</inlineHelpText>
        <label>Q10</label>
        <picklist>
            <picklistValues>
                <fullName>The speaker demonstrated appropriate physical presence (posture, eye contact, hand gestures, etc)</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q10_MSL_BMS__c</fullName>
        <defaultValue>&quot;The speaker demonstrated appropriate physical presence (posture, eye contact, hand gestures, etc)&quot;</defaultValue>
        <description>Speaker Evaluation - MSL - Q10. The speaker demonstrated appropriate physical presence (posture, eye contact, hand gestures, etc)</description>
        <inlineHelpText>Q10. The speaker demonstrated appropriate physical presence (posture, eye contact, hand gestures, etc)</inlineHelpText>
        <label>Q10</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q11_MSL_BMS_IC__c</fullName>
        <description>Speaker Evaluation - MSL - Q11. Comments</description>
        <inlineHelpText>Q11. Comments</inlineHelpText>
        <label>Q11</label>
        <picklist>
            <picklistValues>
                <fullName>Comments</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q11_MSL_BMS__c</fullName>
        <defaultValue>&quot;Comments&quot;</defaultValue>
        <description>Speaker Evaluation - MSL - Q11. Comments</description>
        <inlineHelpText>Q11. Comments</inlineHelpText>
        <label>Q11</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q12_MSL_BMS_IC__c</fullName>
        <description>Speaker Evaluation - MSL - Q12. Did the speaker handle questions effectively and appropriately?</description>
        <inlineHelpText>Q12. Did the speaker handle questions effectively and appropriately?</inlineHelpText>
        <label>Q12</label>
        <picklist>
            <picklistValues>
                <fullName>Did the speaker handle questions effectively and appropriately?</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q12_MSL_BMS__c</fullName>
        <defaultValue>&quot;Did the speaker handle questions effectively and appropriately?&quot;</defaultValue>
        <description>Speaker Evaluation - MSL - Q12. Did the speaker handle questions effectively and appropriately?</description>
        <inlineHelpText>Q12. Did the speaker handle questions effectively and appropriately?</inlineHelpText>
        <label>Q12</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q7_MSL_BMS_Q7__c</fullName>
        <description>Speaker Evaluation - MSL - Q7. Comments</description>
        <inlineHelpText>Q7. Comments</inlineHelpText>
        <label>Q7</label>
        <picklist>
            <picklistValues>
                <fullName>Comments</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Responsive_to_Audience__c</fullName>
        <description>Picklist of responsiveness to the audience ratings</description>
        <inlineHelpText>How responsive was this speaker to the audience?</inlineHelpText>
        <label>Responsive to Audience</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject_Knowledge__c</fullName>
        <description>Picklist of knowledge of the subject ratings</description>
        <inlineHelpText>How well did the speaker know the subject material?</inlineHelpText>
        <label>Subject Knowledge</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>The subject the speaker discussed</description>
        <label>Title</label>
        <type>TextArea</type>
    </fields>
    <label>Speaker Evaluation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Date__c</columns>
        <columns>Subject__c</columns>
        <columns>Overall_Rating__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SE-{00000}</displayFormat>
        <label>Speaker Evaluation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Speaker Evaluations</pluralLabel>
    <recordTypes>
        <fullName>Speaker_Evaluation_Survey_IC</fullName>
        <active>true</active>
        <description>Speaker Evaluation Survey - CA</description>
        <label>Speaker Evaluation Survey - IC</label>
    </recordTypes>
    <recordTypes>
        <fullName>Speaker_Evaluation_Survey_MSL</fullName>
        <active>true</active>
        <description>Speaker Evaluation Survey (MSL)</description>
        <label>Speaker Evaluation Survey (MSL)</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>